<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_select">Select this Intervention</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="action_create">Create Intervention</string>
    <string name="fail_get_static_data">Fail to get static data. Please, try again.</string>
    <string name="fail_get_incident_code">Fail to get incident code. Please, try again.</string>
    <string name="fail_get_resource_type">Fail to get resource type. Please, try again.</string>
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in">Log In</string>
    <string name="action_log_out">Log Out</string>
    <string name="login_successful">Login Successful</string>
    <string name="login_failed">Login Failed</string>
    <string name="logout_summary">Log out from the application</string>
    <string name="validateButton">validate</string>
    <string name="change">change</string>
    <string name="freeButton">free</string>

    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_server_down">The server is unavailable</string>
    <string name="error_field_required">This field is required</string>
    <string name="fail_get_interventions">Fail getting interventions from the server. Please, try again.</string>
    <string name="fail_post_interventions">Fail posting intervention to the server. Please, try again.</string>
    <string name="app_name">Flerjeco</string>
    <string name="title_activity_second">Current Intervention</string>
    <string name="title_activity_list_interventions">List of Interventions</string>
    <string name="activities_agent">Flerjeco - Agent</string>
    <string name="activities_codis">Flerjeco - Codis</string>

    <string name="vehicle_fragment_text">Select the type of vehicle you need :</string>
    <string name="title_activity_display_intervention">DisplayIntervention</string>
    <string name="title_activity_plan_zone">Drone Management</string>
    <string name="resource_request_dialog_title">Ask for resource</string>
    <string name="button_request_resource">Ask</string>
    <string name="title_activity_intervention">Current Intervention</string>
    <string name="title_fragment_create_intervention">Create Intervention</string>
    <string name="intervention_creation">Create Intervention</string>
    <string name="geocoder_failed">Adress did not found</string>
    <string name="nameInterventionHint">Intervention name</string>
    <string name="createInterventionButton">Create Intervention</string>
    <string name="action_create_intervention">Create Intervention</string>
    <string name="title_fragment_change_resource">Change state of resource</string>
    <string name="intervention_address">Intervention address</string>
    <string name="error_required_field">This field is required</string>
    <string name="create_by_address">Address</string>
    <string name="create_by_coordinate">Coordinates</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string-array name="code">
        <item>SAP</item>
        <item>AVP</item>
        <item>FHA</item>
    </string-array>
    <string-array name="stateVehicle">
        <item>@string/human</item>
        <item>@string/risk</item>
        <item>@string/command</item>
        <item>@string/fire</item>
        <item>@string/water</item>
        <item>@string/other</item>
    </string-array>
    <string-array name="stateDraggable">
        <item>@string/human</item>
        <item>@string/risk</item>
        <item>@string/fire</item>
        <item>@string/water</item>
        <item>@string/other</item>
    </string-array>
    <string-array name="resourceDateState">
        <item>@string/resource</item>
        <item>@string/asked</item>
        <item>@string/triggered</item>
        <item>@string/arrived</item>
        <item>@string/engaged</item>
        <item>@string/released</item>
    </string-array>

    <string name="resource">Resource</string>
    <string name="asked">Asked at</string>
    <string name="triggered">Triggered at</string>
    <string name="arrived">Arrived at</string>
    <string name="engaged">Engaged at</string>
    <string name="released">Released at</string>

    <string name="human">Human</string>
    <string name="risk">Risk</string>
    <string name="command">Command</string>
    <string name="fire">Fire</string>
    <string name="water">Water</string>
    <string name="other">Other</string>

    <string name="buttonValidateResources">Validate the position of resources</string>
    <string name="create_path">Create path</string>
    <string name="create_area">Create area</string>
    <string name="finish_edition">Terminate</string>
    <string name="closed_path">Close the path</string>
    <string name="cancel">Cancel</string>
    <string name="remove_marker">Delete the last point</string>
    <string name="remove_path">Delete the path</string>
    <string name="action_settings">Settings</string>
    <string name="buttonCancelResources">Remove positioned resources</string>
    <string name="changeResourceRole">Change the resource role</string>
    <string name="activateResource">Engage the resource</string>
    <string name="freeResource">Free the resource</string>
    <string name="title_dialog_change_resource">Manage the resource</string>
    <string name="empty_list_interventions">There is no interventions, create one</string>
    <string name="libelle_moyen_attente">Vehicle awaiting</string>
    <string name="libelle_moyen_valide">Vehicle validated</string>

    <string name="drone_update_path_error_generic">" The update of the intervention did not work, please try again"</string>
    <string name="button_resource_arrived">Arrived</string>
    <string name="button_resource_released">Released</string>
    <string name="resource_arrived_dialog_title">Vehicle is arrived ?</string>
    <string name="title_activity_tableau"> Managing resources</string>

    <string name="hello_world">Hello world!</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="table">Table</string>
    <string name="visualisation">Visualisation</string>
    <string name="drones">Drones</string>
    <string name="intervention">Intervention</string>
    <string name="resources">Resources</string>
    <string name="manage_activateResource">Vehicle position</string>
    <string name="manage_changeResourceRole">Change the resource</string>
    <string name="libelle_moyen_marqueur">Markers</string>
    <string name="title_activity_visualisation">Visualisation</string>
    <string name="drone_update_path_error_not_available">"No drone available, cannot create a route"</string>
    <string name="drone_update_path_success">"All modifications have been saved"</string>
    <string name="interventions">Interventions</string>
    <string name="remove_resource">Remove Resource</string>
    <string name="manage_freeResource">Free the resource</string>
    <string name="image_slider_empty">No Images</string>
    <string name="fail_get_images">Error while getting images</string>
    <string name="drone_video_title">Video for %s</string>
    <string name="drone_image_slider_title">Image history</string>
    <string name="codis_intervention_title" translatable="false">Intervention %1$s - %2$s - %3$s</string>
    <string name="codis_intervention_title_without_address" translatable="false">Intervention %1$s - %2$s</string>
    <string name="drone_update_area_error_not_available">Cannot create area, no drone available</string>
    <string name="remove_area">Delete the area</string>
</resources>