<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/listViewPath"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="@android:color/darker_gray"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/listViewArea"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="@android:color/darker_gray"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/closed_path"
        android:id="@+id/checkbox_closed_path"
        android:onClick="closePath"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/remove_marker"
        android:id="@+id/buttonRemoveLastPoint"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/cancel"
        android:id="@+id/buttonCancel"
        android:layout_gravity="center_horizontal"
        android:onClick="cancel"
        android:visibility="gone"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/remove_path"
        android:id="@+id/buttonRemove"
        android:layout_gravity="center_horizontal"
        android:onClick="removePath"
        android:visibility="gone"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="@android:color/darker_gray"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/create_path"
        android:id="@+id/buttonCreatePath"
        android:layout_gravity="center_horizontal"
        android:onClick="createPath"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/create_area"
        android:id="@+id/buttonCreateArea"
        android:layout_gravity="center_horizontal"
        android:onClick="createArea"/>

</LinearLayout>