<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="istic.gla.groupeb.flerjeco.codis.intervention.InterventionDialogFragment">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/create_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/intervention_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false">

        <LinearLayout
            android:id="@+id/intervention_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/nameInterventionEditText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/nameInterventionHint"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginBottom="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/CodeSinistreLabel"
                    android:layout_width="155dp"
                    android:layout_height="match_parent"
                    android:layout_gravity=""
                    android:layout_weight="0.5"
                    android:singleLine="true"
                    android:text="Code sinistre : " />

                <Spinner
                    android:id="@+id/CodeSinistreSpinner"
                    android:layout_width="155dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:hint="code sinistre"
                    android:spinnerMode="dialog" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ToggleButton
                    android:id="@+id/address_or_coordinate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:textOn="@string/create_by_coordinate"
                    android:textOff="@string/create_by_address"/>

                <EditText
                    android:id="@+id/address"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:hint="@string/intervention_address"
                    android:inputType="text"/>

                <LinearLayout
                    android:id="@+id/lat_long"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/latitude"
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:hint="@string/latitude"
                        android:inputType="numberSigned"/>

                    <EditText
                        android:id="@+id/longitude"
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:hint="@string/longitude"
                        android:inputType="numberSigned"/>

                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/intervention_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/intervention_creation"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>



</LinearLayout>